--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -725,7 +725,7 @@ html {
       .container {
         .product-intro-content {
           display: flex;
-          padding: 2rem;
+          padding: 2rem 0;
           gap: 1rem;
           flex-direction: column;
           align-items: center;
@@ -1292,7 +1292,6 @@ html {
 
             &:last-child {
               display: none;
-              align-items: center;
               gap: 2.2rem;
               justify-content: center;
               margin-top: 5.8rem;
@@ -1313,16 +1312,21 @@ html {
                   height: 43.5rem;
                 }
 
+                &:nth-of-type(2) {
+                  display: flex;
+                  align-items: center;
+                  > img {
+                    width: 7.5rem;
+                    height: auto;
+                  }
+                }
+
                 > p {
                   font-weight: 400;
                   font-size: 1.84rem;
                   line-height: 130.02%;
                   color: rgba(#000000, 0.5);
                 }
-              }
-
-              > img {
-                width: 7.5rem;
               }
             }
           }
